# clint

./: .env.example  .gitignore  AUDIT.md  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  LAUNCH.md  LIBRARY.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  __init__.py  check_audits.py  check_count.py  check_db.py  clear_db.py  clint.py  clint_cli.py  commander.py  dashboard.html  main.py  pyproject.toml  requirements.txt  reset_systems.py  run_outreach.py  server.py  test_ai.py  test_email.py  test_personalization.py
.github/: pull_request_template.md
cli/: dashboard.py
core/: cli_services.py  config.py  connectors.py  dashboard.html  database.py  deadletter.py  event_bus.py  experiments.py  kpi.py  logger.py  migrations.py  policy.py  prompt_compiler.py  quality_gate.py  reliability.py  reply_intelligence.py  scorer.py  sla_monitor.py  state_machine.py  utils.py  v2_store.py
docs/: COMMANDS.md  CREDENTIALS.md  FAQs.md  HOWTOCONNECT.md  HOWTOUSE.md  INSTALL-LINUX.md  INSTALL-MACOS.md  INSTALL-WINDOWS.md  PRIVACY.md  QUICKSTART.md  README.md  RELEASE.md  TROUBLESHOOTING.md
engine/: __init__.py  auditor.py  director.py  engine.py  proposer.py  worker_orchestrator.py
examples/: README.md  example_batch_leads.py  example_fastapi_integration.py  example_single_lead.py
outreach/: email_operator.py  whatsapp_operator.py
scrapers/: maps.py  web_crawler.py
tests/: final_launch_test.py  test_cli_contract.py  test_deadletter.py  test_email.py  test_fiverr_connector.py  test_incident_playbooks.py  test_library_api.py  test_linkedin_connector.py  test_whatsapp.py  (+3 more)
(+44 files in other folders)
